[package]
name = "leveldb"
version = "0.1.0"
authors = ["ganmacs <ganmacs@gmail.com>"]

[dependencies]
bytes = { git = "https://github.com/carllerche/bytes", rev = "2c27ddaf7e860424071583bcf5913bcdf43e9637" }
byteorder = "1.0.0"
rand = "0.4"
crc = "1.0.0"
regex = "0.2.2"
lazy_static = "1.0"
log = "0.4.0"
env_logger = "0.5.6"
memmap = "0.6.2"